syntax = "proto3";

package payments;

service PaymentService {
  rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}
